--- a/style/style.scss
+++ b/style/style.scss
@@ -27,10 +27,6 @@ html{
 	overflow: hidden;
 }
 
-@media screen and (min-width: 1200px) {
-	
-}
-
 // b-header
 
 .header{
@@ -296,6 +292,7 @@ html{
 
 	&__b-text{
 		text-align: center;
+		margin-bottom: 40px;	
 	}
 
 	&__title{
@@ -655,3 +652,5 @@ html{
 		}
 	}
 }
+
+
